# AFRS

./: Cargo.toml  README.md
.test_data/: data.json
searchable/: Cargo.toml
searchable/src/: lib.rs
searchable_derive/: Cargo.toml
searchable_derive/src/: lib.rs
src/: bin.rs  conditional.pest  conditionals.rs  lib.rs
