[package]
authors = ["dolly-parseton <dolly.parseton@gmail.com>"]
description = "Another f*cking rule syntax, simple quick pattern matching on JSON objects (more data types to come)."
edition = "2018"
license = "MIT"
name = "afrs"
readme = "README.md"
repository = "https://github.com/dolly-parseton/AFRS"
version = "0.1.0"

include = [
  "**/*.rs",
  "**/*.pest",
  "Cargo.toml",
  "README.md",
]

[[bin]]
name = "afrs-cli"
path = "./src/bin.rs"
required-features = ["bin_deps"]

[features]
bin_deps = ["structopt", "serde_json"]

[dependencies]
gjson = "0.8.0"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
# Optional
serde_json = {version = "1.0", optional = true}
structopt = {version = "0.3", default-features = false, optional = true}
