[package]
authors = ["dolly-parseton <dolly-parseton@gmail.com>"]
edition = "2018"
name = "searchable"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
searchable_derive = {path = "../searchable_derive", optional = true}
serde = {version = "1.0", features = ["derive"]}

[features]
default = []
derive = ["searchable_derive"]
